Don't use fixed background on smaller screens

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1538,6 +1538,9 @@ body#emersonla_videos {
 		background-position: center;
 		background-attachment: fixed;
 		position: relative;
+		@media (max-width: 768px) {
+			background-attachment: scroll;
+		}
 	}
 	.video_box {
 		width: 40%;
